2011-11-04  Stephen Chenney  <schenney@chromium.org>

        Crash in ScrollAnimator.cpp
        https://bugs.webkit.org/show_bug.cgi?id=69865

        The code in ScrollAnimator assumes that horizontal per-page mouse
        wheel events cannot happen, which is not true. This patch adds layout
        tests for all paging wheel event situations and fixes the broken
        horizontal case.

        Reviewed by Anders Carlsson

        * DumpRenderTree/chromium/EventSender.cpp:
        (EventSender::handleMouseWheel): Added the ability to specify that a
        mouse wheel event should be paging.

2011-11-04  Eric Seidel  <eric@webkit.org>

        Remove deprecated free functions in port.factory
        https://bugs.webkit.org/show_bug.cgi?id=71494

        Unreviewed.  Fix exception when running new-run-webkit-httpd.

        * Scripts/new-run-webkit-httpd:

2011-11-04  Adam Roben  <aroben@apple.com>

        Remove Leopard-specific code from build.webkit.org

        We don't have any Leopard bots anymore.

        Fixes <http://webkit.org/b/71583> build.webkit.org configuration contains obsolete Leopard code

        Reviewed by Mark Rowe.

        * BuildSlaveSupport/build.webkit.org-config/master.cfg: Removed now-unused StartATSServer
        and StopATSServer steps.
        (unitTestsSupported): Removed check for mac-leopard.
        (TestFactory.__init__): Removed Leopard-specific steps.

2011-11-04  Eric Seidel  <eric@webkit.org>

        new-run-webkit-tests autoinstalls python-irclib even though it doesn't need to
        https://bugs.webkit.org/show_bug.cgi?id=71549

        Reviewed by Adam Barth.

        Several members of Host didn't really belong there
        and were instead specific to WebKitPatch, so I've moved
        them up onto that class.

        * Scripts/webkitpy/common/host.py:
        * Scripts/webkitpy/common/host_mock.py:
        * Scripts/webkitpy/tool/main.py:
        * Scripts/webkitpy/tool/mocktool.py: