@@ -24,7 +24,6 @@
 
 """Autoinstalls third-party code required by WebKit."""
 
-from __future__ import with_statement
 
 import codecs
 import os
@@ -85,21 +84,8 @@ class AutoinstallImportHook(object):
             self._install_buildbot()
 
     def _install_mechanize(self):
-        # The mechanize package uses ClientForm, for example, in _html.py.
-        # Since mechanize imports ClientForm in the following way,
-        #
-        # > import sgmllib, ClientForm
-        #
-        # the search path needs to include ClientForm.  We put ClientForm in
-        # its own directory so that we can include it in the search path
-        # without including other modules as a side effect.
-        clientform_dir = self._fs.join(_AUTOINSTALLED_DIR, "clientform")
-        installer = AutoInstaller(append_to_search_path=True, target_dir=clientform_dir)
-        installer.install(url="http://pypi.python.org/packages/source/C/ClientForm/ClientForm-0.2.10.zip",
-                          url_subpath="ClientForm.py")
-
-        self._install("http://pypi.python.org/packages/source/m/mechanize/mechanize-0.2.4.zip",
-                      "mechanize")
+        self._install("http://pypi.python.org/packages/source/m/mechanize/mechanize-0.2.5.tar.gz",
+                      "mechanize-0.2.5/mechanize")
 
     def _install_pep8(self):
         self._install("http://pypi.python.org/packages/source/p/pep8/pep8-0.5.0.tar.gz#md5=512a818af9979290cd619cce8e9c2e2b",
